syntax = "proto3";
package blog;

option java_package = "com.proto.blog";
option java_multiple_files = true;

message Blog {
  string id = 1;
  string author = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1; // the is shouldn't matter
}

message CreateBlogResponse {
  Blog blog = 1; // the id will correspond  to the one in MogoDB
}

message ReadBlogRequest {
  string id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {};
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {}; // return NOT_FOUND if not found
}